--- a/aim/web/ui/src/App.scss
+++ b/aim/web/ui/src/App.scss
@@ -1,3 +1,4 @@
+@use 'src/styles/abstracts' as *;
 @import './styles/global.scss';
 @import './src/styles/base/_reset.scss';
 @import 'fonts/icomoon/icomoonIcons.scss';
@@ -6,7 +7,7 @@
 @import './styles/components/_autocomplete.scss';
 
 .mainContainer {
-  width: calc(100% - 75px);
+  width: calc(100% - #{$sidebar-width});
   height: 100%;
 }
 
