--- a/aim/web/ui/src/styles/abstracts/_variables.scss
+++ b/aim/web/ui/src/styles/abstracts/_variables.scss
@@ -84,6 +84,8 @@ $space-xs: $space-unit * 0.5;
 $space-sm: $space-unit * 0.75;
 $space-md: $space-unit * 1.25;
 $space-xs: $space-unit * 0.5;
+$sidebar-width: 5rem;
+
 //- to container
 $col-sm: 540px; // (max-width: 540px)
 $col-md: 720px; // (max-width: 720px)
